# FactorHub

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  README_JP.md  USAGE.md  pyproject.toml  pytest.ini  run.bat  start_all.py  start_all.sh  start_backend.bat  start_frontend.bat  todo.md
.claude/: settings.local.json
backend/: main.py
backend/api/: main.py
backend/api/routers/: analysis.py
backend/core/: analyzer.py  database.py  exceptions.py  settings.py
backend/models/: __init__.py  database.py
backend/repositories/: __init__.py  analysis_repository.py  factor_repository.py
backend/services/: __init__.py  analysis_service.py  data_service.py  factor_generator_service.py  factor_monitoring_service.py  factor_service.py  factor_validation_service.py  genetic_factor_mining_service.py  portfolio_analysis_service.py  vectorbt_backtest_service.py
config/: factors.yaml
data/db/: factorflow.db
frontend/: app.py
frontend/components/: __init__.py  factor_management_ui.py
frontend/react-antd/: package-lock.json
frontend/utils/: __init__.py  api_client.py  backend_client.py  config.py
frontend/web/: backtesting.html  factor-analysis.html  factor-management.html  factor-mining.html  index.html  portfolio-analysis.html
frontend/web/css/: common.css
frontend/web/js/: chart-config.js
scripts/: verify_ui_optimization.py
tests/: __init__.py  conftest.py
tests/test_core/: test_analyzer.py
tests/test_repositories/: __init__.py  test_factor_repository.py
tests/test_services/: __init__.py  test_factor_service.py
(+6 files in other folders)
